Modificado o resutado em euro que estava em real

--- a/Conversor de Moedas/index.html
+++ b/Conversor de Moedas/index.html
@@ -73,7 +73,7 @@
         var elementoValorConvertido = document.getElementById("valorConvertidoEmEuro");
 
         //Inserir uma frase da conversão do dólar para real
-        var valorConvertidoEmEuro = "O resultado em real é R$ " + valorEmEuro;
+        var valorConvertidoEmEuro = "O resultado em euro é € " + valorEmEuro;
 
         //Inserir a frase da variáver "valorConvertido" dentro da página
         elementoValorConvertido.innerHTML = valorConvertidoEmEuro;
